--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
+
+body {
+    background-image: url(assets/BG.jpg);
+    background-size: cover;
+}
+
+#page {
+    box-sizing:border-box;
+    width: 800px;
+    padding: 24px;
+    background-color: antiquewhite;
+    border-radius: 24px;
+    margin: 48px auto;
+
+}
+
 img {
     /* border-radius: 16px */
 }
