--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-
+:root {
+    font-family: "Alice", serif;
+    line-height: 150%;
+    color: #573A37;
+}
 body {
     background-image: url(assets/BG.jpg);
     background-size: cover;
@@ -14,6 +18,18 @@ body {
 
 }
 
-img {
-    /* border-radius: 16px */
+/* img {
+     border-radius: 16px 
+} */
+
+h1 {
+    font-size: 40px;
+}
+
+h2 {
+    font-size: 24px;
+}
+
+h1, h2 {
+    color: #291B1A;
 }
