--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 :root {
     font-family: "Alice", serif;
     line-height: 150%;
@@ -22,8 +27,23 @@ body {
      border-radius: 16px 
 } */
 
+main {
+    padding: 24px;
+}
+
+section + section {
+    margin-top: 24px;
+
+}
+
+#about p + p {
+    margin-top: 12px;
+
+}
+
 h1 {
     font-size: 40px;
+
 }
 
 h2 {
@@ -32,4 +52,9 @@ h2 {
 
 h1, h2 {
     color: #291B1A;
+    margin-bottom: 4px;
+}
+
+ul {
+    padding-left: 24px;
 }
